--- a/ToDoWeb/appsettings.json
+++ b/ToDoWeb/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*",
+    "ConnectionStrings": {
+        "DefaultConnection": "Server = BS-01341\\SQLEXPRESS; Database = ToDo; Trusted_Connection = True; TrustServerCertificate=True;"
     }
-  },
-  "AllowedHosts": "*"
 }
