Registration bug fixed and add ToDoTask service layer

--- a/ToDoWeb/ToDoWeb.csproj
+++ b/ToDoWeb/ToDoWeb.csproj
@@ -20,7 +20,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\ToDo.ServiceLayer\ToDo.ServiceLayer.csproj" />
+    <ProjectReference Include="..\ToDo.Utility\ToDo.ServiceLayer.csproj" />
   </ItemGroup>
 
 </Project>
